# insta360_link_uvc_ctrl

./: .gitignore  CMakeLists.txt  README.md  common.h  cos_config.json  inference.cpp  inference.h  install_poco_lib.sh  leaf_disease_classes.txt  main.cpp  mqtt.cpp  mqtt.h  mqtt_utils.cpp  opencv.h  setup_udev_rules.sh  tomoto_maturity_classes.txt  uvc_ctrl.cpp  uvc_ctrl.h  uvc_utils.cpp
cos_include/: cos_params.h
cos_include/op/: base_op.h  file_download_task.h  file_upload_task.h
cos_include/rapidxml/1.13/: rapidxml_print.hpp
cos_include/util/: auth_tool.h  file_util.h  sha1.h  string_util.h
include/: image_process.h  inference_utils.h  mqtt_utils.h  postprocess.h  realsense_utils.h  rknn_pool.h  upload_utils.h  uvc_utils.h
scripts/: setup_udev_rules.sh
src/: inf_example.cpp  inference.cpp  inference_utils.cpp  main.cpp  mqtt_utils.cpp  realsense_utils.cpp  rknn_inference.cpp  upload_utils.cpp  uvc_utils.cpp
utils/: 99-insta360.rules  CMakeLists.txt  image_process.cpp  postprocess.cpp  rknn_pool.cpp  yolov8.cpp
